# PokemonVideogame

./: Bullet.cpp  Bullet.h  CMakeLists.txt  Character.cpp  Character.h  Collision.cpp  Collision.h  ElectricBullet.h  ElectricPokemon.cpp  ElectricPokemon.h  FireBullet.cpp  FireBullet.h  FirePokemon.cpp  FirePokemon.h  Graphic.cpp  Graphic.h  GraphicPokemon.cpp  GraphicPokemon.h  GrassBullet.h  GrassPokemon.cpp  GrassPokemon.h  Item.cpp  Item.h  Map.cpp  Map.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Pokemon.cpp  Pokemon.h  PokemonFactory.cpp  PokemonFactory.h  README.md  Settings.cpp  Settings.h  SpecialAttack.h  Text.cpp  Text.h  TileMap.cpp  (+8 more)
testDirectory/: CMakeLists.txt  CollisionTests.cpp  ItemTests.cpp  PlayerTests.cpp  PokemonTests.cpp  runAllTests.cpp
testDirectory/lib/googletest/include/gtest/internal/: gtest-port.h
